--- a/src/app/pages/home/components/login/login.component.html
+++ b/src/app/pages/home/components/login/login.component.html
@@ -1,11 +1,11 @@
-<div class="modal fade modal-black" id="loginModal" tabindex="-1" role="dialog" aria-labelledby="myModalLabel" aria-hidden="true">
-    <div class="modal-dialog">
+<button *ngIf="!session" class="btn btn-warning" [swal]="swal">
+    <i class="fas fa-user-astronaut"></i> Ingresar
+</button>
 
-        <div class="modal-content" *ngIf="!register">
+<swal #swal background="#242C45" showCloseButton="true" showConfirmButton>
+    <div *swalPortal>
+        <div *ngIf="!register">
             <div class="modal-header justify-content-center">
-                <button type="button" class="close" data-dismiss="modal" aria-hidden="true">
-                    <i class="tim-icons icon-simple-remove text-white"></i>
-                </button>
                 <div class="text-muted text-center ml-auto mr-auto">
                     <h3 class="mb-0">Inicia Sesión</h3>
                 </div>
@@ -42,11 +42,7 @@
                     </div>
 
                     <div class="text-center">
-                        <div class="form-check mt-3">
-                            <label class="form-check-label">Recuérdame </label>
-                            <input type="checkbox" name="checkbox" class="bootstrap-switch" checked/>
-                        </div>
-                        <button type="button" (click)="api.login(email.value, pass.value)" class="btn btn-primary my-4">Ingresar</button>
+                        <button type="button" data-dismiss="modal" (click)="api.login(email.value, pass.value)" class="btn btn-warning my-4">Ingresar</button>
                     </div>
                 </form>
 
@@ -60,7 +56,7 @@
             </div>
         </div>
 
-        <div class="modal-content" *ngIf="register">
+        <div *ngIf="register">
             <app-register></app-register>
 
             <hr>
@@ -72,4 +68,4 @@
             </div>
         </div>
     </div>
-</div>
+</swal>
