--- a/src/styles.css
+++ b/src/styles.css
@@ -1,1 +1,37 @@
-/* You can add global styles to this file, and also import other style files */
+@import "../node_modules/ngx-toastr/toastr.css";
+.dropdown-item {
+    color: #FFFFFF !important;
+}
+
+.dropdown-menu {
+    background-color: #32325d !important;
+}
+
+.clickable {
+    animation: slideup 1s ease-in-out, fadein 1s ease-in-out 0ms 1;
+    cursor: pointer;
+}
+
+.btn {
+    animation: slideup 1s ease-in-out, fadein 1s ease-in-out 0ms 1;
+}
+
+.menu {
+    margin: 20px;
+}
+
+.chat-window {
+    margin: auto;
+    padding: 10px;
+    width: 300px;
+    height: 400px;
+    overflow: hidden;
+    border: 1px solid #4080FF;
+    border-radius: 20px;
+}
+
+.app-mensajes {
+    overflow-y: scroll;
+    height: 380px;
+    padding: 5px;
+}
