--- a/src/app/components/footer/footer.component.html
+++ b/src/app/components/footer/footer.component.html
@@ -34,7 +34,7 @@
 
 <swal #privacy background="#242C45" showCloseButton="true" showConfirmButton>
     <div *swalPortal>
-        <div *ngIf="!register">
+        <div>
             <div class="modal-header justify-content-center">
                 <div class="text-muted text-center ml-auto mr-auto">
                     <h3 class="mb-0">Política de privacidad</h3>
