--- a/src/app/pages/menu/components/add-artwork/add-artwork.component.html
+++ b/src/app/pages/menu/components/add-artwork/add-artwork.component.html
@@ -4,7 +4,7 @@
 </button>
 <swal #swal background="#242C45" (open)="onOpen()" showCloseButton="true" showConfirmButton>
     <div *swalPortal>
-        <div *ngIf="!register">
+        <div>
             <div class="modal-header justify-content-center">
                 <div class="text-muted text-center ml-auto mr-auto">
                     <h3 class="mb-0">Agregar obra</h3>
