--- a/src/app/components/navbar/components/search/search.component.html
+++ b/src/app/components/navbar/components/search/search.component.html
@@ -6,7 +6,7 @@
 
 <swal #swal background="#242C45" showCloseButton="true" showConfirmButton>
     <div *swalPortal>
-        <div *ngIf="!register">
+        <div>
             <div class="modal-header justify-content-center">
                 <div class="text-muted text-center ml-auto mr-auto">
                     <h3 class="mb-0">Busca una obra de arte</h3>
